--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,6 +7,7 @@ Changelog:
   Using unused alternate shield models for Jewish religion.
   Fixed Ugric fallback portraits.
   More ironman portrait versions.
+  More fallback replacements.
   Added Celtiberian portraits for mod use.
   Replaced Fylkir crown with the Norse winged religious head crown.
 
