New Hellenic priest councillor.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -21,6 +21,7 @@ Changelog:
   Moved Hindu monastic society tilaka to the general set.
   Port Russian eyes to the Westernslavic faces for Russian portraits.
   Mixed Turkish and Ugric faces for early Hungarian and Tocharian portraits.
+  Another go at making a Hellenic priest model.
 
 02-06-2019
   Update to 3.2.0
