--- a/Changelog.txt
+++ b/Changelog.txt
@@ -2,9 +2,10 @@ Changelog:
 
   Added Tianxia compatibility submod.
   Added new South-East Asian portraits.
+  Added Hellenic Greek portraits for earlier era mods.
   Fixed Ancient Religions Celtic compatibility.
   Fixed Chinese crowns getting blocked by republic government type.
-  Changed Chinese offmap support for generalized offmap support.
+  Changed Chinese offmap support to generalized offmap support.
 
 12-09-2019
   New hair and beardstyles, clothing and headgear for Norse,
