Society clothing: quest detection and lay members.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,10 @@
 Changelog:
 
+  Monastic lay members (i.e. rulers) will wear society clothing with regular headgear.
+  Limit Warrior lodge clothing to times leading troops or landless courtiers.
+  Added society quest detection to enable society clothing.
+  Clearer plot target ring.
+
 28-10-2019
   Overhauled the fallback portraits into the Hotep's Dream; Everyone is various shades of Egyptian now.
   Integrated Egyptian portraits.
