--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,6 +5,7 @@ Changelog:
   Added society quest detection to toggle society clothing.
   Clearer plot target ring.
   Further adjustment of the fallback face graphics.
+  Added new alternate non-Norse pagan shield emblems.
   Added Mythos compatibility submod.
 
 28-10-2019
