--- a/Changelog.txt
+++ b/Changelog.txt
@@ -2,6 +2,11 @@ Changelog:
 
   New baby portrait sprites.
   Child portraits properly filled and cropped to portrait rings.
+  Adjusted Eastern Slavic children skintone.
+  Adjusted Berber skintone.
+  Generalized most Rise to Power scripts.
+  Adapted French rules for unveiled young women into a general rule.
+  Using French courtier veils for most European cultures.
 
 18-11-2019
   Added Mythos compatibility submod.
