--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,13 +1,15 @@
 Changelog:
 
+12-01-2020
+  Using French layered veils for most European cultures.
+  Adapted French rules for unveiled young women into a general rule.
   New baby portrait sprites.
   Child portraits properly filled and cropped to portrait rings.
   Adjusted Eastern Slavic children skintone.
   Adjusted Berber and Italian skintone.
   Generalized landless player support.
-  Adapted French rules for unveiled young women into a general rule.
-  Using French layered veils for most European cultures.
   Replaced the supposedly buggy true_father scopes.
+  Elder Kings: Created dynamic child portraits for non-humans.
 
 18-11-2019
   Added Mythos compatibility submod.
