--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,6 +1,8 @@
 Changelog:
 
   Applied Orrie's workshop dependencies fix.
+  Logging the mixed children events for debugging data.
+  Always replace noculture ethnicities.
   Added AGOT More bloodlines genetic portraits.
 
 12-01-2020
