--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,6 +1,8 @@
 Changelog:
 
   Applied Orrie's workshop dependencies fix.
+  Reduce chance of headgear changes.
+  New combination for Miaphysite and Nestorian monastic clothing.
   Logging the mixed children events for debugging data.
   Always replace noculture ethnicities.
   Added AGOT More bloodlines genetic portraits.
