--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,14 +3,15 @@ Changelog:
   Added game rules:
   - Added rule about wearing helmets.
   - Split traits and diseases.
-  - Primary parent always determines child ethnicity.
-  - Post mortem disease and wound effects.
-  - No makeup from traits.
+  - Primary parent always determines child ethnicity option.
+  - Post mortem disease and wound effects option.
+  - No makeup from traits option.
   Use the HRE eagle shield for Byzantine and Roman empires.
   Use a small empire shield for the Papal State.
   Improvements to African unit pack.
   More transparent makeup for a subtler look.
   Added blush to attractive men.
+  New Muslim satanist society clothing.
 
 17-03-2020
   Added armour to clothing sets that didn't have it.
