Erilaz' Gjermundbu and Coppergate helmets.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,7 @@
 Changelog:
 
+  Added Erilaz' Gjermundbu and Coppergate helmets.
+
 24-04-2020
   The CoA map frames have been split off into a new mod 'Frames for All' for feature creep management.
   Added game rules:
