Events scripted trigger/effects reorganization.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,7 +5,9 @@ Changelog:
   - Repeated and variable parts moved to scripted triggers.
   - Easier to change and maintain for different mods.
   - More detail added.
-  Societies and other portrait overrides moved to scripted trigger use too.
+  Societies and other portrait overrides moved to scripted trigger use.
+  Event scripts code cleanup.
+  Culture specific courtier initialization moved into region specific options instead.
   Update some disease and wound graphics.
   Moved furniture artifacts to separate layer to only show on indoor backgrounds.
   Replacement for parrot to old-world parakeet.
