--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,7 +1,9 @@
 Changelog:
+
+16-01-2021
   Fade dead character portraits, with a game rule toggle.
   Change necklaces to the characters view angle.
-  Fixed twin ethnicities.
+  Fixed twin ethnicities matching.
 
 27-09-2020
   Portrait properties fully rewritten:
