--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,7 @@
 Changelog:
 
+  Scale up ship models.
+
 16-01-2021
   Fade dead character portraits, with a game rule toggle.
   Change necklaces to the characters view angle.
