--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,6 +5,7 @@ Changelog:
   CK2Plus support updated to version 5.
   Reorganized culture and religion scripted triggers.
   Support some more minor titles.
+  Use merchant clothing for republic counts and up.
 
 27-10-2021
   Rewrite and clean up of the portrait properties code.
