--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,6 +1,7 @@
 Changelog:
 
   New Baltic portraits using the fallback northern faces.
+  Give French faces a bit more tan.
   Fix installation path detection for newer Steam versions.
   CK2Plus support updated to version 5.
   Reorganized culture and religion scripted triggers.
