--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,6 +1,7 @@
 Changelog:
 
   New Baltic portraits using the fallback northern faces.
+  New Georgian/Armenian portraits using the fallback mediterranean faces.
   Give French faces more colour.
   New Sami/Siberian portraits.
   Tweaking the custom face sets.
